# Digit_recognizer

./: .gitignore  AutoencoderClusters.py  CheckAutoEncoder.py  DeepDream.py  Flatten.py  GraphNet.py  GraphWeights.py  MakeAutoencoderPredictor.py  MakeBranchedNet.py  MakeNet.py  README.txt  SeeNet.py  TestNet.py  TrainAutoEncoder.py  TrainAutoEncoderPredictor.py  TrainNet.py  WkikiBot.py  activacion.py  activaciones.py  addLoss.py  analisis_red.py  ascii  auto_encoder_predictor  auto_encoder_predictor.pickle  auto_encoder_utils.py  autoencoder.pickle  autoencoder2.pickle  autoencoder3.pickle  autoencoder4.pickle  autoencoder4.pickle.pickle  branchedNetwork.py  capa.py  convolucional.py  costos.py  densa.py  graph_in_terminal.py  grapher.py  handle_image.py  input.py  layerNorm.py  (+24 more)
jupyter_stuff/: Math.ipynb
jupyter_stuff/.ipynb_checkpoints/: Math-checkpoint.ipynb
