[tool.poetry]
name = "digit-recognizer"
version = "0.1.0"
description = ""
authors = ["juan <juanogriffin@gmail.com>"]
readme = "README.md"
packages = [{include = "digit_recognizer"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
cv = "^1.0.0"
ipython = "^8.19.0"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
